# pos

./: .editorconfig  .env.docker.example  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SESSION_HANDOVER.md  SESSION_STATUS.md  SP01_AUDIT_REPORT.md  SP02_AUDIT_REPORT.md  SP03_AUDIT_REPORT.md  SP04_AUDIT_REPORT.md  SP05_AUDIT_REPORT.md  SP06_AUDIT_REPORT.md  SP07_AUDIT_REPORT.md  SP08_AUDIT_REPORT.md  SP09_AUDIT_REPORT.md  SP10_AUDIT_REPORT.md  SP11_AUDIT_REPORT.md  SP12_AUDIT_REPORT.md  docker-compose.override.example.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  README.md  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
backend/apps/accounting/: signals.py  tasks.py
backend/apps/analytics/: tasks.py
backend/apps/core/: apps.py  cache.py  models.py  storage.py  tasks.py  views.py
backend/apps/core/cache/: __init__.py
backend/apps/core/storage/: __init__.py  paths.py
backend/apps/core/utils/: __init__.py  user_model_utils.py
backend/apps/customers/: constants.py
backend/apps/customers/models/: __init__.py  customer.py
backend/apps/employees/: constants.py  filters.py  signals.py
backend/apps/employees/admin/: employee_admin.py
backend/apps/employees/docs/: README.md
backend/apps/employees/models/: employee.py  employee_address.py  employee_bank.py  employee_document.py  employee_family.py  employment_history.py
backend/apps/employees/serializers/: employee_serializer.py
backend/apps/employees/services/: employee_service.py  import_service.py  search_service.py
backend/apps/employees/validators/: __init__.py  nic_validator.py  phone_validator.py
backend/apps/employees/views/: document_viewset.py  employee_viewset.py
backend/apps/inventory/: admin.py  apps.py
backend/apps/inventory/models/: __init__.py
backend/apps/invoices/tasks/: email.py
backend/apps/orders/: admin.py  apps.py  constants.py
backend/apps/orders/models/: __init__.py  order.py  order_item.py
backend/apps/organization/: README.md
backend/apps/organization/models/: __init__.py  department.py  department_member.py  designation.py
backend/apps/organization/services/: __init__.py  department_service.py  designation_service.py  orgchart_service.py
backend/apps/organization/views/: department_viewset.py  designation_viewset.py
backend/apps/payments/models/: payment_receipt.py
backend/apps/payroll/tasks/: period_tasks.py  processing_tasks.py
backend/apps/platform/: auth.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/pos/: admin.py  constants.py  urls.py
backend/apps/pos/cart/: views.py
backend/apps/pos/models/: __init__.py
backend/apps/pos/payment/: serializers.py  views.py
backend/apps/pos/search/: serializers.py  validators.py  views.py
backend/apps/pos/terminal/: serializers.py
backend/apps/products/: README.md  __init__.py  admin.py  apps.py  constants.py
backend/apps/products/api/: serializers.py  urls.py  views.py
backend/apps/products/models/: __init__.py  category.py  image.py  managers.py  product.py  variant.py
backend/apps/sales/models/: invoice.py
backend/apps/tenants/: admin.py  apps.py  domain_urls.py  domain_views.py  models.py  routers.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/tenants/middleware/: __init__.py  tenant_middleware.py
backend/apps/tenants/services/: __init__.py  provisioning.py  seed_data.py
backend/apps/users/: admin.py  apps.py  models.py
backend/apps/vendor_bills/: admin.py
backend/apps/vendors/: apps.py  constants.py
backend/config/: asgi.py  env.py  urls.py
backend/config/settings/: base.py  cache.py  database.py  local.py  production.py  test.py
backend/requirements/: base.in  base.txt  local.in  local.txt  production.in  production.txt  test.txt
backend/tests/core/: test_user_model.py
backend/tests/employees/: conftest.py
backend/tests/organization/: test_api.py  test_services.py
backend/tests/pos/: conftest.py
backend/tests/products/: conftest.py  test_product_api.py
backend/tests/tenants/: test_integration.py  test_middleware.py  test_performance.py  test_provisioning.py  test_routers.py
docs/: index.md  (+3 more)
(+127 files in other folders)
